# oglc

./: CMakeLists.txt  log.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glfw-3.3.8/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
lib/glfw-3.3.8/examples/: Makefile  cmake_install.cmake
lib/glfw-3.3.8/src/: Makefile  cmake_install.cmake
lib/glfw-3.3.8/tests/: Makefile  cmake_install.cmake
lib/stb_image/: CMakeLists.txt
src/: def.h  gen.c  gen.h  input.c  input.h  main.c  mesh_data.c  mesh_data.h  time.c  time.h  window.c  window.h
src/data/: m3.c  m3.h  m4.c  m4.h  packed_array.c  packed_array.h  rgba.h  v3.c  v3.h  v4.c  v4.h
src/ecs/: ecs.c  ecs.h
src/ecs/components/: camera.c  camera.h  mesh.c  mesh.h  shader.c  shader.h  texture.c  texture.h  transform.c  transform.h
src/ecs/components/component/: component.c  component.h
src/render/: mesh_data.c  mesh_data.h  render_batch.c  render_batch.h  shader_data.c  shader_data.h  texture_data.c  texture_data.h
src/shaders/: default.fs  default.vs  wave_test.fs  wave_test.vs
src/utils/: file.c  file.h
